# seadexarr

./: .env.example  .gitignore  CHANGES.rst  Dockerfile  README.md  pyproject.toml  seadexarr.py  seadexarr.py.deprecated
.github/workflows/: publish_pypi.yaml
seadexarr/: __init__.py
seadexarr/cli/: __init__.py  main.py
seadexarr/clients/: __init__.py  anilist.py  radarr.py  seadx.py  sonarr.py
seadexarr/config/: __init__.py  settings.py
seadexarr/core/: __init__.py  filters.py  mappers.py  sync.py
seadexarr/modules/: config_sample.yml  seadex_arr.py  seadex_radarr.py  seadex_sonarr.py
seadexarr/utils/: __init__.py  exceptions.py  logging.py  retry.py
